Fixed bleeding video container

--- a/videonail.css
+++ b/videonail.css
@@ -61,6 +61,8 @@
 
 .yt-pip #player-container, /* Polymer */
   body#body .yt-pip #movie_player /* Old */ {
+  display: flex;
+  flex-flow: column;
   max-height: 100vh;
   max-width: 100vw;
   min-height: 100px;
